--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-alfredo.html">Chicken Alfredo </a>
+    <h1> Chicken Alfredo</h1>
 </body>
 </html>
