--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -4,41 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1> Chicken Alfredo</h1>
-    <img src="../images/Chicken-Alfredo-bowl.jpg" >
-    <h3> Description</h3>
-    <body> Chicken alfredo is a classic creamy chicken dish that is easy to make!
-    </body>
-    <h3> Ingredients </h3>
-    <Ol>
-        <li>1 pound boneless skinless chicken breast </li>
-        <li>3 teaspoons kosher salt</li>
-        <li> 3.75 teaspoon black pepper</li>
-        <li> 1.25</li>teaspoon paprika</li>
-        <li>1 tablespoon olive oil</li>
-        <li>3 quarts water</li>
-        <li>8 ounces fettuccine</li>
-        <li>2 teaspoons minced garlic</li>
-        <li>2 tablespoons unsalted butter</li>
-        <li>1 1/4 cup heavy cream</li>
-        <li>1 cup grated parmesan cheese, or parmigiano reggiano</li>
-        <li>1/8 teaspoon nutmeg</li>
-        <li>1 tablespoon chopped parsley</li>
-    </Ol>
-    <h3>Steps</h3>
-    <ol>
-        <li>Cut each chicken breast in half lengthwise to create two cutlets, four total.</li>
-        <li>In a small bowl combine 1 teaspoon salt, 1/4 teaspoon pepper, and paprika. Evenly season both sides of the chicken with the spice mixture.</li>
-        <li>Heat a large skillet over medium heat. Once the pan is hot, add the olive oil. Add the chicken and cook until the surface is browned, about 5 for 6 minutes. Flip and cook until the internal temperature reaches 160 to 165F (71 to 74C), about 5 to 7 minutes.</li>
-        <li>Transfer to a plate and cover with foil to keep warm. Wash and dry the pan to use for making the alfredo sauce.</li>
-        <li>In a large pot, bring 3 quarts of water to a boil. Add 1 1/2 teaspoon salt, stir to dissolve.</li>
-        <li>Add the pasta and cook until al dente, about 10 to 12 minutes, or according to the manufacturer's directions. Use tongs to transfer to a colander - Reserve the starchy pasta water. While the pasta cooks, make the alfredo sauce.</li>
-        <li>Heat a large skillet over medium-low heat. Add butter. Once melted, add garlic and saute until fragrant, 30 to 60 seconds. Do not brown the butter or garlic.</li>
-        <li>Add the heavy cream, 1/2 teaspoon salt, and 1/2 teaspoon pepper, stir to combine. Bring the cream to a simmer over medium heat. Cook, frequently stirring, scraping the sides and bottom of the pan to make sure the cream does not curdle.</li>
-        <li>Reduce the sauce to about 1 cup, 10 to 12 minutes. It should be slightly thickened and be able to coat the back of a spoon.</li>
-        <li>Turn off the heat and stir in the parmesan cheese and nutmeg. If the sauce is too thick, add water or cream. Add 1 tablespoon at a time until you reach the desired consistency-season with salt and pepper to taste.</li>
-    </ol>
+    <div class="title">
+    <h1> Chicken Alfredo </h1>
+    <img src="../images/Chicken-Alfredo-bowl.jpg">
+    </div>
+<div class= "description">
+        <h3> Description</h3>
+        <div> Chicken alfredo is a classic creamy chicken dish that is easy to make!
+        </div>
+    </div>
+<div class="content">
+    <div class="ingredients">
+        <h3> Ingredients </h3>
+            <li>1 pound boneless skinless chicken breast </li>
+            <li>3 teaspoons kosher salt</li>
+            <li> 3.75 teaspoon black pepper</li>
+            <li> 1.25 teaspoon paprika</li>
+            <li>1 tablespoon olive oil</li>
+            <li>3 quarts water</li>
+            <li>8 ounces fettuccine</li>
+            <li class="veg">2 teaspoons minced garlic</li>
+            <li class="dairy">2 tablespoons unsalted butter</li>
+            <li class="dairy">1 1/4 cup heavy cream</li>
+            <li class="dairy">1 cup grated parmesan cheese, or parmigiano reggiano</li>
+            <li>1/8 teaspoon nutmeg</li>
+            <li class="veg">1 tablespoon chopped parsley</li>
+        </ul>
+    </div>
+    <div class="optional">
+        <h3> Optional Ingredients</h3>
+            <li class="dairy"> more butter yum!</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h3>Steps</h3>
+         <ul>
+            <li>Cut each chicken breast in half lengthwise to create two cutlets, four total.</li>
+            <li>In a small bowl combine 1 teaspoon salt, 1/4 teaspoon pepper, and paprika. Evenly season both sides of the chicken with the spice mixture.</li>
+            <li>Heat a large skillet over medium heat. Once the pan is hot, add the olive oil. Add the chicken and cook until the surface is browned, about 5 for 6 minutes. Flip and cook until the internal temperature reaches 160 to 165F (71 to 74C), about 5 to 7 minutes.</li>
+            <li>Transfer to a plate and cover with foil to keep warm. Wash and dry the pan to use for making the alfredo sauce.</li>
+            <li>In a large pot, bring 3 quarts of water to a boil. Add 1 1/2 teaspoon salt, stir to dissolve.</li>
+            <li>Add the pasta and cook until al dente, about 10 to 12 minutes, or according to the manufacturer's directions. Use tongs to transfer to a colander - Reserve the starchy pasta water. While the pasta cooks, make the alfredo sauce.</li>
+            <li>Heat a large skillet over medium-low heat. Add butter. Once melted, add garlic and saute until fragrant, 30 to 60 seconds. Do not brown the butter or garlic.</li>
+            <li>Add the heavy cream, 1/2 teaspoon salt, and 1/2 teaspoon pepper, stir to combine. Bring the cream to a simmer over medium heat. Cook, frequently stirring, scraping the sides and bottom of the pan to make sure the cream does not curdle.</li>
+            <li>Reduce the sauce to about 1 cup, 10 to 12 minutes. It should be slightly thickened and be able to coat the back of a spoon.</li>
+            <li>Turn off the heat and stir in the parmesan cheese and nutmeg. If the sauce is too thick, add water or cream. Add 1 tablespoon at a time until you reach the desired consistency-season with salt and pepper to taste.</li>
+        </ul>
+    </div>
+</div>
+    <button> <a href="../index.html"> Return </a> </button>
 </body>
 </html>
